--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Игровой автомат</title>
-        <meta name="description" content="">
+        <title>Slot Machine</title>
+        <meta name="description" content="A simple slot machine.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles/main.css">
     </head>
     <body id="top">
         <div id="game-scene">
-            <button class="start-button" type="button" autofocus="autofocus" data-action="start-game">Играть</button>
+            <button class="start-button" type="button" autofocus="autofocus" data-action="start-game">Pull!</button>
         </div>
 
         <script src="./app.js"></script>
